[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-estimator"
version = "0.1.0"
description = "Power-law model estimation tool for predicting resource usage"
authors = [{name = "Tercen"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
]

[project.scripts]
model-estimator = "model_estimator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_estimator*"]
